--- a/composer.json
+++ b/composer.json
@@ -61,14 +61,22 @@
             "Composer\\Config::disableProcessTimeout",
             "npx concurrently -c \"#93c5fd,#c4b5fd,#fdba74\" \"php artisan serve\" \"php artisan queue:listen --tries=1\" \"npm run dev\" --names='server,queue,vite'"
         ],
-        "quality": [
-            "Composer\\Config::disableProcessTimeout",
-            "npx concurrently --sequential -c \"#a7f3d0,#93c5fd,#c4b5fd,#fdba74\" \"@rector\" \"@phpstan\" \"@pint\" \"@peck\" --names='rector,phpstan,pint,peck'"
-        ],
-        "rector": "vendor/bin/rector",
-        "phpstan": "vendor/bin/phpstan analyse --memory-limit=2G",
-        "pint": "vendor/bin/pint",
-        "peck": "vendor/bin/peck"
+        "lint": "pint",
+        "refactor": "rector",
+        "test:type-coverage": "pest --type-coverage --min=100",
+        "test:typos": "peck",
+        "test:lint":  "pint --test",
+        "test:unit": "pest --parallel --coverage --exactly=100.0",
+        "test:types": "phpstan",
+        "test:refactor": "rector --dry-run",
+        "test": [
+            "@test:type-coverage",
+            "@test:typos",
+            "@test:unit",
+            "@test:lint",
+            "@test:types",
+            "@test:refactor"
+        ]
     },
     "extra": {
         "laravel": {
